# loratrainer

./: EVALUATION.md  INSTRUCTIONS.md  docker-compose.yml  project-structure  setup-project.ps1
backend/: .env  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_generated_images.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  generation.py  projects.py
backend/app/core/: celery_app.py  config.py  security.py
backend/app/db/: base.py
backend/app/models/: image.py  project.py  user.py
backend/app/schemas/: auth.py  image.py  project.py
backend/app/services/: image_generation.py  storage.py
backend/app/tasks/: generation.py
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/dashboard/: page.tsx
frontend/src/app/(auth)/projects/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/Auth/: ProtectedRoute.tsx
frontend/src/components/ImageGeneration/: GenerationForm.tsx  ImageGallery.tsx
frontend/src/components/Layout/: MainNav.tsx  Sidebar.tsx
frontend/src/components/Projects/: CreateProjectDialog.tsx  ProjectCard.tsx
frontend/src/components/ui/: loading.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useImageGeneration.ts  useImageHistory.ts
frontend/src/services/api/: generation.ts  history.ts  projects.ts
(+3 files in other folders)
